🐛 Fixing more mobile scaling issues with covers and headings

--- a/src/Fydar.Dev.WebApp/Components/CoverArt/CoverGrid.razor.css
+++ b/src/Fydar.Dev.WebApp/Components/CoverArt/CoverGrid.razor.css
@@ -3,6 +3,49 @@
 .cover-grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-gap: 16px 16px;
-    margin: 16px 0;
+    gap: 10px 10px;
+    margin: 10px 0;
+}
+
+/* Slim Mobile */
+@media screen and (max-width: 576px) {
+    .cover-grid,
+    .cover-grid.cover-grid-sm {
+    }
+}
+
+/* Mobile */
+@media screen and (min-width: 576px) {
+    .cover-grid,
+    .cover-grid.cover-grid-sm {
+    }
+}
+
+/* Tablet */
+@media screen and (min-width: 768px) {
+    .cover-grid,
+    .cover-grid.cover-grid-sm {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+/* Low-Resolution Desktop */
+@media screen and (min-width: 992px) {
+    .cover-grid,
+    .cover-grid.cover-grid-sm {
+    }
+}
+
+/* Desktop */
+@media screen and (min-width: 1200px) {
+    .cover-grid,
+    .cover-grid.cover-grid-sm {
+    }
+}
+
+/* Full-screen Desktop */
+@media screen and (min-width: 1400px) {
+    .cover-grid,
+    .cover-grid.cover-grid-sm {
+    }
 }
